@@ -144,7 +144,7 @@
         $urlHandler = $conf['site']['urlHandler'];
 
         $url = new SGL_URL($_SERVER['PHP_SELF'], true, new $urlHandler());
-        $input = &SGL_RequestRegistry::singleton();
+        $input = &SGL_Registry::singleton();
         $input->setCurrentUrl($url);
         
         //  get base url
