@@ -67,7 +67,7 @@ class SGL_AppController
      */
     function run()
     {
-        $input = &SGL_RequestRegistry::singleton();
+        $input = &SGL_Registry::singleton();
         $input->setRequest($req = SGL_Request::singleton());
         
         $process =  new SGL_Init(
